# unu

./: .editorconfig  .gitignore  .pylintrc  Dockerfile  MANIFEST.in  Makefile  README.md  __init__.py  docker-compose.yml  manage.py  requirements.txt  setup.cfg  setup.py
djangoutils/: asgi.py  settings.py  urls.py  wsgi.py
etc/nginx/conf.d/: server.conf
media/css/: default.css  fonts.css  reset.css  sablono.css
media/css/raw/: edit-test.css
media/css/sablono/: font-awesome.css  fonts.css  main.css  meta.css  (+1 more)
media/js/: mavor.js  sablono-demo.js
templatetags/: client_code.py  string.py
test_fixers/: urls.py
tools/closure/: app.py
unu/: __init__.py  apps.py  urls.py
unu/templatetags/: client_code.py  formtags.py  html.py  numbers.py  optimization.py  string.py
unu/utils/: __init__.py  ip.py  jwt.py  mongo.py  version.py
unu/views/: __init__.py  add_closure_compiler.py  analyze.py  fiu.py  fiu_app.py  fiu_get_files.py  fiu_new_app.py  fiu_new_component.py  fiu_new_page.py  fix_js_namespaces.py  fix_models.py  fix_urls.py  fix_views.py  get_apps.py  get_models.py  get_urls.py  index.py  new_view.py  new_view_create.py  optimize_client_code.py  sproo.py  sproo_app.py  sproo_get_files.py  sproo_new_app.py  sproo_new_component.py  sproo_new_page.py  toggle_template_static.py
utils/: __init__.py
utils/context_processors/: language.py  mobile.py
utils/django/: __init__.py
utils/encoders/: __init__.py
utils/encryption/: rsa.py
views/: __init__.py  analyze.py  fix_views.py  get_apps.py  get_models.py  index.py  optimize_client_code.py
(+155 files in other folders)
