[metadata]
name = unu
version = 0.0.1
description = A Django app that makes life with Django a bit more enjoyable.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.unuondo.com/
author = Danijel Pancic
author_email = danijel.pancic@unuaondo.com
license = MIT License
classifiers =
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords = development, utilities, utils

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires =
    django
    gunicorn
    psycopg2-binary
    python3-memcached
    requests
    beautifulsoup4
    html5lib
    lxml
    pymongo
    pycryptodomex
    whoosh
    pyjwt
    pyyaml
    yamlordereddictloader
    calmjs.parse
    black
    isort
    autoflake
